--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <section class="red"></section>
 
     <section class="mail-address" id="mail">
-      <h2 class="fadeIn">Mail Address</h2>
+      <h2 class="fadeIn">Mail</h2>
       <h3 class="fadeIn">kw@allnightnippon.com</h3>
     </section>
 
